--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Basic info</title>
+    <title>Rodrigo Ruas</title>
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
 
     <!-- Fontawesome -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
